[project]
name = "reinforcementtrading-part-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.1.0",
    "asttokens==3.0.0",
    "backtesting==0.6.3",
    "beautifulsoup4==4.13.4",
    "bokeh==3.7.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "curl-cffi==0.11.1",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "farama-notifications==0.0.4",
    "filelock==3.17.0",
    "fonttools==4.56.0",
    "frozendict==2.4.6",
    "fsspec==2025.2.0",
    "grpcio==1.70.0",
    "gym-notices==0.0.8",
    "gymnasium==1.0.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multitasking==0.0.11",
    "narwhals==1.31.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy>=2.2.6",
    "packaging==24.2",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pandas-ta>=0.4.71b0",
    "parso==0.8.4",
    "peewee==3.18.1",
    "pillow==11.1.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "requests==2.32.3",
    "shimmy==2.0.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "stable-baselines3==2.5.0",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.6.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "xyzservices==2025.1.0",
    "yfinance==0.2.61",
]
